--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  dio: ^5.7.0
   flutter_material_pickers: ^3.7.0
+  file_picker: ^8.1.4
+  file_saver: ^0.2.14
   choice: ^2.3.2
   country_picker: ^2.0.27
   country_icons: ^3.0.0
@@ -47,6 +50,13 @@ dependencies:
   fluttertoast: ^8.1.6
   skeletonizer: ^1.4.3
   flutter_supabase_chat_core: ^1.4.3
+  flutter_chat_types: ^3.6.2
+  infinite_scroll_pagination: ^4.1.0
+  timeago: ^3.7.0
+  open_filex: ^4.6.0
+  path_provider: ^2.1.5
+  http: ^1.2.2
+  flutter_chat_ui: ^1.6.15
 
 dev_dependencies:
   flutter_test:
