--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   path_provider: ^2.1.5
   http: ^1.2.2
   flutter_chat_ui: ^1.6.15
+  get_thumbnail_video: ^0.7.3
 
 dev_dependencies:
   flutter_test:
