--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   http: ^1.2.2
   flutter_chat_ui: ^1.6.15
   get_thumbnail_video: ^0.7.3
+  video_player: ^2.9.2
 
 dev_dependencies:
   flutter_test:
