add: notificaiton feature

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "args": [
                 "--no-enable-impeller",
                 "-d",
-                "4E4DBE1A-F1C8-4F6D-8739-3846DF35B4B8" // Specify the emulator ID here
+                "emulator-5554" // Specify the emulator ID here
             ]
         },
         {
