--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   get_thumbnail_video: ^0.7.3
   video_player: ^2.9.2
   cube_transition_plus: ^2.0.1
+  flutter_styled_toast: ^2.2.1
 
 dev_dependencies:
   flutter_test:
