--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,30 +1,95 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "bnn",
-            "request": "launch",
-            "type": "dart",
-            // "args": [
-            //     "--no-enable-impeller",
-            //     "-d",
-            //     "emulator-5554" // Specify the emulator ID here
-            // ]
-        },
-        {
-            "name": "bnn (profile mode)",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "profile"
-        },
-        {
-            "name": "bnn (release mode)",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "release"
-        }
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Current Device",
+      "request": "launch",
+      "type": "dart",
+      "args": [
+        "--no-enable-impeller",
+        "-d",
+        "emulator-5554" // Specify the emulator ID here
+      ]
+    },
+    {
+      "name": "Other Device",
+      "request": "launch",
+      "type": "dart",
+      "args": [
+        "--no-enable-impeller",
+        "-d",
+        "emulator-5556" // Specify the emulator ID here
+      ]
+    },
+    {
+      "name": "bnn (profile mode)",
+      "request": "launch",
+      "type": "dart",
+      "flutterMode": "profile"
+    },
+    {
+      "name": "bnn (release mode)",
+      "request": "launch",
+      "type": "dart",
+      "flutterMode": "release"
+    },
+    {
+      "name": "Current Device (Profile)",
+      "request": "launch",
+      "type": "dart",
+      "flutterMode": "profile",
+      "args": [
+        "--no-enable-impeller",
+        "-d",
+        "emulator-5554"
+      ]
+    },
+    {
+      "name": "Other Device (Profile)",
+      "request": "launch",
+      "type": "dart",
+      "flutterMode": "profile",
+      "args": [
+        "--no-enable-impeller",
+        "-d",
+        "emulator-5556"
+      ]
+    },
+    {
+      "name": "Current Device (Release)",
+      "request": "launch",
+      "type": "dart",
+      "flutterMode": "release",
+      "args": [
+        "--no-enable-impeller",
+        "-d",
+        "emulator-5554"
+      ]
+    },
+    {
+      "name": "Other Device (Release)",
+      "request": "launch",
+      "type": "dart",
+      "flutterMode": "release",
+      "args": [
+        "--no-enable-impeller",
+        "-d",
+        "emulator-5556"
+      ]
+    }
+  ],
+  "compounds": [
+    {
+      "name": "All Devices",
+      "configurations": ["Current Device", "Other Device"],
+    },
+    {
+      "name": "All Devices (Profile)",
+      "configurations": ["Current Device (Profile)", "Other Device (Profile)"],
+    },
+    {
+      "name": "All Devices (Release)",
+      "configurations": ["Current Device (Release)", "Other Device (Release)"],
+    }
+  ]
 }
