--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "args": [
         "--no-enable-impeller",
         "-d",
-        "emulator-5554" // Specify the emulator ID here
+        "80E51B7A-DDED-435C-85FD-5BC38F5C2C84"
       ]
     },
     {
@@ -49,11 +49,7 @@
       "request": "launch",
       "type": "dart",
       "flutterMode": "profile",
-      "args": [
-        "--no-enable-impeller",
-        "-d",
-        "emulator-5556"
-      ]
+      
     },
     {
       "name": "Current Device (Release)",
