--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.1.2
   open_filex: ^4.6.0
   video_player: ^2.9.3
+  google_sign_in_ios: ^5.8.1
 
 dev_dependencies:
   flutter_test:
