--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -68,5 +68,15 @@
 	</array>
 	<!-- End of the Google Sign-in Section -->
 
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>bnn</string>
+			</array>
+		</dict>
+	</array>
+
 </dict>
 </plist>
